--- a/site_title.rhtml
+++ b/site_title.rhtml
@@ -1,1 +1,1 @@
-<%= link_to(image_tag("/designs/themes/conference/images/thin-logo.png"), environment.top_url) %>
+<%= link_to(_('Participa.gov.br'), environment.top_url) %>
