--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ body {
 }
 
 #wrap-1 {
-    width: auto;
+    width: 100%;
     margin: 0px;
+    background: url(images/site-top2.png) repeat-x;
 }
 
 #wrap-2 {
-    width: 960px;
+    max-width: 960px;
     margin: auto;
     border: 0px;
+    margin-top: 40px;
 }
 
 #main-content-wrapper-1,
@@ -31,28 +33,33 @@ body {
 /* Bar Psocial Style */
 
 #theme-header {
-    height: 40px;
-    background-image: linear-gradient(bottom, #E8E8E8 20%, #FEFEFE 80%);
-    background-image: -o-linear-gradient(bottom, #E8E8E8 20%, #FEFEFE 80%);
-    background-image: -moz-linear-gradient(bottom, #E8E8E8 20%, #FEFEFE 80%);
-    background-image: -webkit-linear-gradient(bottom, #E8E8E8 20%, #FEFEFE 80%);
-    background-image: -ms-linear-gradient(bottom, #E8E8E8 20%, #FEFEFE 80%); 
-    background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0.2, #E8E8E8),
-        color-stop(0.8, #FEFEFE)
-    );
+    height: 100px;
+    margin: auto;
+    text-align: right;
+}
+
+#theme-header .header-content {
+    max-width: 960px;
+    margin: auto;
 }
 
 #profile-header {
     min-height: 150px;
 }
 
-#site-title { top: -40px; }
+#site-title {
+    top: -130px;
+    height: 57px;
+    width: 372px;
+}
 
-#user { top: -30px; }
+#site-title a {
+    color: #FFF;
+    text-decoration: none;
+    font-size: 48px;
+}
+
+#user { top: 0px; }
 
 #barra-brasil {
     box-shadow: 0px 0px 10px #DFDFDF inset;
@@ -63,9 +70,16 @@ body {
 
 #barra-psocial {
     position: relative;
-    width: 960px;
+    width: 1800px;
+    height: 40px;
     margin: auto;
+    background: url(images/barra-psocial-bg.png) repeat-x;
 }
+
+#barra-psocial li {
+  float: left;
+}
+
 #assets-menu {
     background: #E8E8E8;
     top: 35px;
@@ -103,20 +117,33 @@ body {
     border-radius: 5px;
 }
 
-/* Social Buttons */
-#social-buttons {
-    float: right;
-    text-align: right;
-    width: 200px;
-    margin-top: -30px;
-    height: 30px;
+/* Search Button */
+#search-button a {
+    display: inline-block;
+    width: 29px;
+    height: 25px;
+    margin-right: 3px;
+    margin-top: 10px;
 }
 
+#search-button a:hover {
+    opacity: 0.6;
+}
+
+#search-button #sb_search {
+background-image: url(images/search.png);
+background-size: 100% 100%;
+}
+
+#search-button span { display: none; }
+
+/* Social Buttons */
 #social-buttons a {
     display: inline-block;
-    width: 24px;
-    height: 24px;
+    width: 18px;
+    height: 20px;
     margin-right: 3px;
+    margin-top: 10px;
 }
 
 #social-buttons a:hover {
@@ -125,23 +152,53 @@ body {
 
 #social-buttons #sb_face {
 background-image: url(images/facebook.png);
-background: none,url(images/facebook.svg);
+Xbackground: none,url(images/facebook.svg);
 background-size: 100% 100%;
 }
 
 #social-buttons #sb_tweet {
 background-image: url(images/twitter.png);
-background: none,url(images/twitter.svg);
+Xbackground: none,url(images/twitter.svg);
 background-size: 100% 100%;
 }
 
-#social-buttons #sb_feed {
-background-image: url(images/rss.png);
-background: none,url(images/rss.svg);
+#social-buttons #sb_youtb {
+background-image: url(images/youtube.png);
+Xbackground: none,url(images/youtube.svg);
+background-size: 100% 100%;
+}
+
+#social-buttons #sb_flickr {
+background-image: url(images/flickr.png);
+Xbackground: none,url(images/flickr.svg);
 background-size: 100% 100%;
 }
 
 #social-buttons span { display: none; }
+
+/* Top links */
+#top-links {
+  padding-bottom: 3px;
+}
+
+#top-links a {
+    display: inline-block;
+    font-size: 10px;
+    margin-right: 3px;
+    margin-top: 15px;
+    color: #E7F1E9;
+    text-decoration: none;
+    text-transform:uppercase;
+}
+
+#top-links a:hover {
+    opacity: 0.6;
+}
+
+#top-links #link-faq {
+    border-right: 1px solid #E7F1E9;
+    padding-right:5px;
+}
 
 /* Title Header */
 
@@ -244,16 +301,14 @@ div#article-parent {
 /* Blocks main style */
 
 #content .box-1 .block {
-    background: #eeefff;
     width: 48%;
     float: left;
     margin-right: 10px;
 }
 
 #content .box-1 .block-title {
-    background: #757575;
     padding: 0.6em 1.5em;
-    color: #FFF;
+    color: #444;
     text-transform: uppercase;
     font-variant: normal;
 }
@@ -274,7 +329,7 @@ div#article-parent {
 
 /* Box styles */
 .box-1 {
-    margin: 0 0 0 170px;
+    Xmargin: 0 0 0 170px;
 }
 
 .box-2 {
@@ -330,6 +385,58 @@ div#article-parent {
 .blog-post {
     background: none !important;
     margin: 0px;
+}
+
+/* Block Display Content style */
+
+#content .box-1 .display-content-block {
+    width: 300px;
+}
+
+.box-1 .display-content-block ul {
+    list-style: none;
+    margin: 0px;
+}
+
+.box-1 .display-content-block {
+    font-size: 14px;
+}
+
+.box-1 .display-content-block h2 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+/* Block Article style */
+
+#content .box-1 .article-block {
+    width: 100%;
+    font-size: 14px;
+}
+
+#content .box-1 .article-block .block-title {
+    display: none;
+}
+
+#content .box-1 .article-block h2 {
+    font-size: 34px;
+    font-weight: bold;
+}
+
+#content .box-1 .article-block .read-more {
+    float: right;
+}
+
+#content .box-1 .article-block .read-more a {
+    display: block;
+    height: 30px;
+    text-align: center;
+    padding: 7px;
+    background: url(images/read-more-home.png) repeat-x;
+}
+
+#content .box-1 .article-block .read-more a:first-child {
+    display: none;
 }
 
 /* Block My Network style */
@@ -399,6 +506,12 @@ div#article-parent {
     margin-left: 15px;
 }
 
+#content .people-block .vcard a.profile_link {
+    height: 52px;
+    margin: 0;
+    width: 52px;
+}
+
 .box-1 .block-footer-content {
     clear: both;
     text-align: right;
@@ -406,16 +519,42 @@ div#article-parent {
     color: #000;
     position: relative;
     padding: 5px;
-    background: #DFDFDF;
-    border-top: 3px solid #545454;
+    Xbackground: #DFDFDF;
+    Xborder-top: 3px solid #545454;
 }
 
 #content .box-1 .block-footer-content a {
     position: relative;
 }
 
-#content .box-1 .display-content-block {
-    width: 250px;
+/* Blocks tags */
+.action-home-index #content .box-1 .block.tags-block {
+    background: #034811;
+    min-height: 50px;
+    padding: 20px 0;
+    width: 100%;
+}
+
+.action-home-index #content .box-1 .block.tags-block {
+   margin-bottom: 0px;
+}
+
+.action-home-index #content .box-1 .block.tags-block .block-title {
+    display: none;
+}
+
+.action-home-index #content .box-1 .tags-block .block-footer-content a {
+    color: #FFFFFF;
+}
+
+.action-home-index .box-1 .block.tags-block a,
+.action-home-index .box-1 .block.tags-block a:visited,
+.action-home-index .box-1 .block.tags-block a:hover {
+    color: #E7F1E9;
+}
+
+.action-home-index .box-1 .block.tags-block a:hover {
+    text-decoration: underline;
 }
 
 /* Menu List footer */
@@ -481,7 +620,6 @@ div#article-parent {
 .box-2 .link-list-block ul li .icon-eyes,
 .box-2 .link-list-block ul li .icon-edit,
 .box-2 .link-list-block ul li .icon-photos {
-    background-image: url('images/media-icons.png');
     background-position: 0px -325px !important;
     height: 27px;
     padding: 13px 0px 0px 45px !important;
@@ -499,4 +637,55 @@ div#article-parent {
     background-position: 0px -245px !important;
 }
 
+/* Footer */
 
+#theme-footer {
+    width: 100%;
+}
+
+#footer-logos {
+    background: #00420C;
+    max-width: 100%;
+    padding: 2em 0;
+    height: 49px;
+}
+
+#footer-logos div,
+#footer-license {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+#footer-logos a {
+  display: block;
+  height: 49px;
+  float: left;
+}
+
+#footer-logos span {
+  display: none;
+}
+
+#footer-logos .logo-acesso {
+  background: transparent url(images/acesso-a-informacao.png) center center no-repeat;
+  width: 107px;
+}
+
+#footer-logos .logo-brasil {
+  background: transparent url(images/brasil.png) center center no-repeat;
+  width: 153px;
+}
+
+#footer-logos .logo-sgpr {
+  background: transparent url(images/sgpr.png) center center no-repeat;
+  width: 187px;
+  margin-right: 30px;
+}
+
+#footer-logos .institucionais {
+  float: right;
+}
+
+#footer-license {
+  text-align: left;
+}
