Added categories on header

--- a/header.rhtml
+++ b/header.rhtml
@@ -16,4 +16,7 @@
   </div>
 </div>
 <div id="barra-psocial">
+  <div id="categories_menu">
+    <%= render :file => 'categories.rhtml' %>
+  </div>
 </div>
