--- a/style.css
+++ b/style.css
@@ -309,6 +309,10 @@ div#article-parent {
     margin-right: 10px;
 }
 
+.action-home-index #content .box-1 .block.raw-html-block {
+    width: 100%;
+}
+
 .action-home-index #content .box-1 .block-title {
     padding: 0.6em 1.5em;
     color: #444;
