--- a/header.rhtml
+++ b/header.rhtml
@@ -1,20 +1,89 @@
 <div id="barra-brasil">
 </div>
 <div class="header-content">
-  <div id="search-button">
-    <a id="sb_search" href="/search"><span>Search</span></a>
-  </div>
-  <div id="social-buttons">
-    <a id="sb_tweet" href="http://twitter.com/participa"><span>Twitter</span></a>
-    <a id="sb_youtb" href="http://youtube.com/user/participa"><span>Youtube</span></a>
-    <a id="sb_face" href="http://www.facebook.com/participa"><span>Facebook</span></a>
-    <a id="sb_flickr" href="#"><span>Flickr</span></a>
-  </div>
-  <div id="top-links">
-    <a id="link-faq" href="/portal/faq"><span>Perguntas frequentes</span></a>
-    <a id="link-contact" href="/contact/portal/new"><span>Contato</span></a>
+  <div role="banner" id="header">
+    <div>
+      <ul id="accessibility">
+        <li>
+          <a id="link-conteudo" href="#content" accesskey="1">
+            Ir para o conteúdo
+            <span>1</span>
+          </a>
+        </li>
+        <li>
+          <a id="link-navegacao" href="#navigation" accesskey="2">
+            Ir para o menu
+            <span>2</span>
+          </a>
+        </li>
+        <li>
+          <a id="link-buscar" href="#portal-searchbox" accesskey="3">
+            Ir para a Busca
+            <span>3</span>
+          </a>
+        </li>
+        <li>
+          <a id="link-rodape" href="#footer" accesskey="4">
+            Ir para o rodapé
+            <span>4</span>
+          </a>
+        </li>
+      </ul>
+      <ul id="portal-siteactions">
+        <li>
+          <a href="#">Acessibilidade</a>
+        </li>
+        <li>
+          <a href="#">Alto Contraste</a>
+        </li>
+        <li>
+          <a href="#">Mapa do Site</a>
+        </li>
+      </ul>
+
+      <div id="logo">
+        <a title="Participa.br" href="/">
+          <span id="portal-title">Participa.br</span>
+        </a>
+      </div>
+
+      <div role="search" id="portal-searchbox">
+        <form>
+          <input type="text" autocomplete="off" name="SearchableText" size="18" title="Buscar no Site" placeholder="Buscar no Site" accesskey="3" class="searchField" id="searchGadget">
+          <input type="submit" class="searchButton" value="Buscar"></form>
+      </div>
+
+      <div id="social-icons">
+        <ul>
+          <li>
+            <a id="sb_face" title="Facebook" href="http://www.facebook.com/participa"><span>Facebook</span></a>
+          </li>
+          <li>
+            <a id="sb_tweet" title="Twitter" href="http://twitter.com/participa"><span>Twitter</span></a>
+          </li>
+          <li>
+            <a id="sb_youtb" title="Youtube" href="http://youtube.com/user/participa"><span>Youtube</span></a>
+          </li>
+          <li>
+            <a id="sb_flickr" title="Flickr" href="#"><span>Flickr</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="sobre">
+      <ul>
+        <li id="link-faq">
+          <a href="/portal/faq">Perguntas frequentes</a>
+        </li>
+        <li id="link-contact">
+          <a href="/contact/portal/new">Contato</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
+
 <div id="barra-psocial">
   <div id="categories_menu">
     <%= render :file => 'categories.rhtml' %>
