--- a/style.css
+++ b/style.css
@@ -807,3 +807,7 @@ div#article-parent {
 	width:136px;
 	color:#98baa5;
 }
+
+#header input.searchButton {
+  background-image: url(images/search-button.gif);
+}
