Organizing portal home

--- a/header.rhtml
+++ b/header.rhtml
@@ -11,7 +11,7 @@
           </a>
         </li>
         <li>
-          <a id="link-navegacao" href="#navigation" accesskey="2">
+          <a id="link-navegacao" href="#barra-psocial" accesskey="2">
             Ir para o menu
             <span>2</span>
           </a>
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li>
-          <a id="link-rodape" href="#footer" accesskey="4">
+          <a id="link-rodape" href="#theme-footer" accesskey="4">
             Ir para o rodapé
             <span>4</span>
           </a>
