--- a/style.css
+++ b/style.css
@@ -16,11 +16,15 @@ body {
     margin: 0px;
 }
 
+#theme-header {
+    font-size: 12px;
+}
+
 #wrap-2 {
     max-width: 960px;
     margin: auto;
     border: 0px;
-    margin-top: 223px;
+    margin-top: 160px;
 }
 
 #main-content-wrapper-1,
@@ -35,9 +39,18 @@ body {
     background: none;
 }
 
+/* Overwriting Brasil gov style */
+#portal-siteactions {
+   padding-bottom: 5px;
+   margin-top: -10px;
+}
+
 /* Bar Psocial Style */
 
-#user { top: -30px; }
+#user {
+   top: -30px;
+   font-size: 12px;
+}
 
 #user form {
     display:none;
@@ -355,22 +368,6 @@ div#article-parent {
 
 /* Blocks main style */
 
-.action-home-index #content .box-1 .block {
-    width: 48%;
-    float: left;
-    margin-right: 10px;
-}
-
-.action-home-index #content .box-1 .block.raw-html-block {
-    width: 100%;
-    background-image: url(images/bg-palacio-do-planalto.jpg);
-}
-
-.action-home-index #content .box-1 .block.track-list-block {
-    width: 100%;
-    background-image: url(images/bg-pessoas.jpg);
-}
-
 .action-home-index #content .box-1 .block-title {
     padding: 0.6em 1.5em;
     color: #444;
@@ -453,16 +450,6 @@ div#article-parent {
 }
 
 /* Block Display Content style */
-
-.action-home-index #content .box-1 .display-content-block {
-    width: 300px;
-}
-
-#content .box-1 .statistics-block li,
-#content .box-1 .display-content-block li {
-    list-style: none;
-    margin: 0px;
-}
 
 .box-1 .display-content-block {
     font-size: 14px;
@@ -569,12 +556,6 @@ div#article-parent {
 
 .box-1 .common-profile-list-block {
     margin-left: 15px;
-}
-
-.action-home-index #content .box-1 .communities-block,
-.action-home-index #content .box-1 .people-block {
-    background-image: url(images/bg-linhas-cinza.png);
-    margin-right: 0px;
 }
 
 .action-home-index #content .communities-block .block-title,
@@ -769,17 +750,13 @@ div#article-parent {
 /* padrao da barra verde - estatistica */
 .action-home-index #content .box-1 .statistics-block {
    width: 100%;
+   display: inline-block;
+   margin: 0px;
+   padding: 28px 0px 15px 0px;
 }
 
 .action-home-index .statistics-block .block-title {
    display: none;
-}
-
-.action-home-index .statistics-block-data{
-	background:#0c763e;
-	width:960px;
-	float:left;
-	padding:10px 0 25px 0;
 }
 
 .action-home-index .statistics-block-data ul{
@@ -810,4 +787,84 @@ div#article-parent {
 
 #header input.searchButton {
   background-image: url(images/search-button.gif);
+}
+
+/* HOME */
+
+.action-home-index #wrap-2 {
+  max-width: none;
+  padding: 0px;
+}
+
+.action-home-index #boxes {
+  margin-top: 0px;
+}
+
+.action-home-index #content {
+  margin: 0px;
+}
+
+.action-home-index .home-blocks-inner {
+  max-width: 960px;
+  margin: auto;
+}
+
+.action-home-index #content-blocks {
+  margin-top: 30px;
+  clear: both;
+}
+
+.action-home-index #content-blocks .home-blocks-inner {
+  text-align: center;
+}
+
+.action-home-index #content .box-1 .display-content-block {
+    width: 300px;
+    display: inline-block;
+    text-align: left;
+}
+
+.action-home-index #content #content-blocks-inner {
+    max-width: 960px;
+}
+
+#content .box-1 #content .statistics-block li,
+#content .box-1 #content .display-content-block li {
+    list-style: none;
+    margin: 0px;
+}
+
+.action-home-index #content .communities-block,
+.action-home-index #content .people-block {
+    display: inline-block;
+    width: 50%;
+    vertical-align: top;
+    margin-top: 30px;
+}
+
+.action-home-index #content .box-1 .block {
+    margin-right: 0px;
+}
+
+.action-home-index #statistics-blocks {
+	background:#0c763e;
+}
+
+.action-home-index .statistics-block {
+	padding:10px 0 25px 0;
+}
+
+.action-home-index #circles-blocks {
+    width: 100%;
+    background: url(images/bg-palacio-do-planalto.jpg);
+    padding-top: 20px;
+}
+
+.action-home-index #block.track-list-blocks {
+    width: 100%;
+    background: url(images/bg-pessoas.jpg);
+}
+
+.action-home-index #profile-blocks {
+    background: url(images/bg-linhas-cinza.png);
 }
