Replacing people-block by display-people-block

--- a/footer.rhtml
+++ b/footer.rhtml
@@ -16,4 +16,4 @@
   </div><!-- end id="footer-license" -->
 </div>
 
-<script type="text/javascript" src="http://barra.brasil.gov.br/barra.js?cor=verde"></script>
+<!-- <script type="text/javascript" src="http://barra.brasil.gov.br/barra.js?cor=verde"></script> -->
